<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NoteActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.NoteKeeper.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.NoteKeeper.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <Spinner
            android:id="@+id/spinnerCourses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <EditText
            android:id="@+id/textNoteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/note_title"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCourses" />

        <EditText
            android:id="@+id/textNoteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/note_text"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
            app:layout_constraintTop_toBottomOf="@+id/textNoteTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>