<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="100"
        android:title="@string/send_as_email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:title="@string/next"
        app:showAsAction="always" />
</menu>