<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="add">Add</string>
    <string name="send_as_email">Send as email</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_note">Edit Note</string>
...
